crates/solidity/testing/snapshots/bindings_output/yul/constant_access_from_functions/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ContractKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword.
    ╭─[ input.sol:27:1 ]
    │
 27 │ uint256 constant TOP_LEVEL_CONST = 0;
    │ ───────────────────┬──────────────────  
    │                    ╰──────────────────── Error occurred here.
────╯
[39mReferences and definitions:[0m 
    ╭─[ input.sol:1:1 ]
    │
  1 │ contract InContracts {
    │          ─────┬─────  
    │               ╰─────── name: 1
  2 │     uint256 private constant CONTRACT_CONST = 1;
    │                              ───────┬──────  
    │                                     ╰──────── name: 2
    │ 
  4 │     function test() public {
    │              ──┬─  
    │                ╰─── name: 3
    │ 
  6 │             function swap(emptyPtr) {
    │                      ──┬─ ────┬───  
    │                        ╰──────────── name: 4
    │                               │     
    │                               ╰───── name: 5
    │ 
 14 │ library InLibraries {
    │         ─────┬─────  
    │              ╰─────── name: 6
 15 │     uint256 private constant LIB_CONST = 2;
    │                              ────┬────  
    │                                  ╰────── name: 7
    │ 
 17 │     function test() public {
    │              ──┬─  
    │                ╰─── name: 8
    │ 
 19 │             function swap(emptyPtr) {
    │                      ──┬─ ────┬───  
    │                        ╰──────────── name: 9
    │                               │     
    │                               ╰───── name: 10
    │
    ├─[ input.sol:1:1 ]
    │
  7 │                 mstore(emptyPtr, CONTRACT_CONST)
    │                 ───┬── ────┬───  ───────┬──────  
    │                    ╰───────────────────────────── ref: built-in
    │                            │            │        
    │                            ╰───────────────────── ref: 5
    │                                         │        
    │                                         ╰──────── ref: 2
  8 │                 mstore(emptyPtr, TOP_LEVEL_CONST)
    │                 ───┬── ────┬───  ───────┬───────  
    │                    ╰────────────────────────────── ref: built-in
    │                            │            │         
    │                            ╰────────────────────── ref: 5
    │                                         │         
    │                                         ╰───────── unresolved
    │ 
 20 │                 mstore(emptyPtr, LIB_CONST)
    │                 ───┬── ────┬───  ────┬────  
    │                    ╰──────────────────────── ref: built-in
    │                            │         │      
    │                            ╰──────────────── ref: 10
    │                                      │      
    │                                      ╰────── ref: 7
 21 │                 mstore(emptyPtr, TOP_LEVEL_CONST)
    │                 ───┬── ────┬───  ───────┬───────  
    │                    ╰────────────────────────────── ref: built-in
    │                            │            │         
    │                            ╰────────────────────── ref: 10
    │                                         │         
    │                                         ╰───────── unresolved
────╯
[39mDefiniens:[0m 
    ╭─[ input.sol:1:1 ]
    │
  1 │ ╭─▶ contract InContracts {
    ┆ ┆   
 12 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 1
    │
    ├─[ input.sol:1:1 ]
    │
  2 │ │       uint256 private constant CONTRACT_CONST = 1;
    │ │   ────────────────────────┬────────────────────────  
    │ │                           ╰────────────────────────── definiens: 2
  3 │ ╭─▶ 
    ┆ ┆   
 11 │ ├─▶     }
    │ │           
    │ ╰─────────── definiens: 3
    │
    ├─[ input.sol:1:1 ]
    │
  6 │ ╭─▶             function swap(emptyPtr) {
    ┆ ┆   
  9 │ ├─▶             }
    │ │                   
    │ ╰─────────────────── definiens: 4
    │
    ├─[ input.sol:1:1 ]
    │
  6 │                 function swap(emptyPtr) {
    │                               ────┬───  
    │                                   ╰───── definiens: 5
    │ 
 13 │ ╭─▶ 
    ┆ ┆   
 25 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 6
    │
    ├─[ input.sol:1:1 ]
    │
 15 │ │       uint256 private constant LIB_CONST = 2;
    │ │   ──────────────────────┬─────────────────────  
    │ │                         ╰─────────────────────── definiens: 7
 16 │ ╭─▶ 
    ┆ ┆   
 24 │ ├─▶     }
    │ │           
    │ ╰─────────── definiens: 8
    │
    ├─[ input.sol:1:1 ]
    │
 19 │ ╭─▶             function swap(emptyPtr) {
    ┆ ┆   
 22 │ ├─▶             }
    │ │                   
    │ ╰─────────────────── definiens: 9
    │
    ├─[ input.sol:1:1 ]
    │
 19 │             function swap(emptyPtr) {
    │                           ────┬───  
    │                               ╰───── definiens: 10
────╯
